# Kalman

./: Kalman_C.h
Filter_motor/: Filter_motor.ino
Filter_motor/Filter/: AA.py  AAA.py  CMakeLists.txt  Filter.ino  Kalman.ipynb
Filter_motor/Filter/include/: matplotlibcpp.h
Filter_motor/Filter/scr/: Kalman_C.cpp  main.cpp  main2.cpp
Filter_motor/Filter/scr/matplotlib-cpp/examples/: imshow.cpp  modern.cpp  nonblock.cpp  subplot.cpp  subplot2grid.cpp  update.cpp
Filter_motor/matplotlib-cpp/: README.md
Filter_motor/matplotlib-cpp/contrib/: Dockerfile  Makefile
Filter_motor/matplotlib-cpp/examples/: animation.cpp  basic.cpp  colorbar.cpp  contour.cpp  lines3d.cpp  minimal.cpp  spy.cpp  surface.cpp
